Starting to fix - Contact Page

--- a/about.html
+++ b/about.html
@@ -106,11 +106,11 @@
                     </li>
                     <li>
                         Compact Size <br/>
-                        <span>Save valuable counter space with VFRY's compact and space-efficient air fryers, ideal for kitchens of all sizes.</span>
+                        <span>Save valuable counter space with V-FRY's compact and space-efficient air fryers, ideal for kitchens of all sizes.</span>
                     </li>
                     <li>
                         Warranty Coverage <br/>
-                        <span>VFRY stands behind the quality of its products with comprehensive warranty coverage, offering customers added assurance and support.</span>
+                        <span>V-FRY stands behind the quality of its products with comprehensive warranty coverage, offering customers added assurance and support.</span>
                     </li>
                 </ol>
             </div>
