--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,9 @@
         </nav>
 
         <main class="contact-container" id="contact">
-            <div class="page-title-v1">
-                <h1 class="title contact-title">Have a Query?
-                    <span class="contact-subtitle vfry-title theme-yellow">we are here for you!</span>
-                </h1>
+            <div class="full-page-information">
+                <h1 class="title contact-title">Have a Query?</h1>
+                <span class="contact-subtitle vfry-title theme-yellow">we are here for you!</span>
             </div>
 
             <div class="form-container">
