--- a/media.html
+++ b/media.html
@@ -61,9 +61,9 @@
             <div class="video-gallery">
                 <div class="full-page-information full-page">
                     <h1 class="title">
-                        Air Fryer Masterclass!
+                        Flavors in Motion
                     </h1>
-                    <span class="vfry-title theme-yellow medium-font"> Elevate Your Culinary Skills with Expert Training </span>
+                    <span class="vfry-title theme-yellow medium-font"> Explore Our Air Fryer Video Gallery! </span>
                     <br />
                 </div>
                 
