--- a/specials.html
+++ b/specials.html
@@ -82,37 +82,37 @@
                 <div class="weekly-sales-container">
                     <div class="sales-container">
                         <img class="item-image" src="./images/products/Originals.png" alt="AIR FRY - Originals">
-                        <h6 class="item-title vfry-title large-font theme-yellow">Originals <span class="theme-white small-font">AIR FRY</span> </h6>
+                        <h6 class="item-title vfry-title weekly-sales-font theme-yellow">Originals <span class="theme-white weekly-small-font">AIR FRY</span> </h6>
                         <p class="item-description">The AIR FRY Originals contains the state of the art heater with high performing fans to deep fry your foods!</p>
                     </div>
 
                     <div class="sales-container">
                         <img class="item-image" src="./images/products/Oven.png" alt="AIR FRY - Compact">
-                        <h6 class="item-title vfry-title large-font theme-yellow">Compact <span class="theme-white small-font">AIR FRY</span> </h6>
+                        <h6 class="item-title vfry-title weekly-sales-font theme-yellow">Compact <span class="theme-white weekly-small-font">AIR FRY</span> </h6>
                         <p class="item-description">The AIR FRY Compact is built for compact use, with small in dimensions the heater is as powerful as the originals!</p>
                     </div>
 
                     <div class="sales-container">
                         <img class="item-image" src="./images/products/Smart-oven.png" alt="AIR FRY - Oven">
-                        <h6 class="item-title vfry-title large-font theme-yellow">Oven <span class="theme-white small-font">AIR FRY</span> </h6>
+                        <h6 class="item-title vfry-title weekly-sales-font theme-yellow">Oven <span class="theme-white weekly-small-font">AIR FRY</span> </h6>
                         <p class="item-description">The AIR FRY Oven is equiped with manual user interface and contains capability of both a fryer and oven in a single device!</p>
                     </div>
 
                     <div class="sales-container">
                         <img class="item-image" src="./images/products/Originals.png" alt="AIR FRY - Innovate">
-                        <h6 class="item-title vfry-title large-font theme-yellow">Innovate <span class="theme-white small-font">SMART FRY</span> </h6>
+                        <h6 class="item-title vfry-title weekly-sales-font theme-yellow">Innovate <span class="theme-white weekly-small-font">SMART FRY</span> </h6>
                         <p class="item-description">The SMART FRY Originals it is equiped with digital interface and contains the state-of-the-art heater with high performing fans to deep fry your foods!</p>
                     </div>
 
                     <div class="sales-container">
                         <img class="item-image" src="./images/products/smart-fry-compact.png" alt="SMART FRY - Compact">
-                        <h6 class="item-title vfry-title large-font theme-yellow">Compact <span class="theme-white small-font">SMART FRY</span> </h6>
+                        <h6 class="item-title vfry-title weekly-sales-font theme-yellow">Compact <span class="theme-white weekly-small-font">SMART FRY</span> </h6>
                         <p class="item-description">The SMART FRY Compact is compact in size and is equiped with digital interface that can be controlled from any location!</p>
                     </div>
 
                     <div class="sales-container">
                         <img class="item-image" src="./images/products/Oil-less.png" alt="SMART FRY - Oil-less">
-                        <h6 class="item-title vfry-title large-font theme-yellow">Oil-less <span class="theme-white small-font">SMART FRY</span> </h6>
+                        <h6 class="item-title vfry-title weekly-sales-font theme-yellow">Oil-less <span class="theme-white weekly-small-font">SMART FRY</span> </h6>
                         <p class="item-description">The SMART FRY Oil-less is equiped with Infrared cooking technology to fry your food with minimal oil consumption.</p>
                     </div>
                 </div>
