--- a/training.html
+++ b/training.html
@@ -61,7 +61,7 @@
 
     <main class="training-container" id="training">
         <div class="video-banner" class="video-banner">
-            <video src="./media/video/airfry-video2.mp4" autoplay muted loop>
+            <video src="./media/video/banner-video.mp4" autoplay muted loop>
                 Video Does not work in your browser!
             </video>
             <div class="full-page-information overlay">
@@ -80,12 +80,11 @@
         </div>
 
         <div class="table-container" id="schedule">
-            <table>
+            <table class="training-table">
                 <caption>Product Training Schedule</caption>
                 <tr>
                     <th>Product</th>
                     <th>Image</th>
-                    <th>Description</th>
                     <th>Date</th>
                     <th>Duration</th>
                     <th>Cost of Training</th>
@@ -95,99 +94,91 @@
                 <!-- Row 1 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/Oil-less.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 2 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/Originals.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 3 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/Oven.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 4 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/smart-fry-compact.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 5 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/Smart-oven.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 6 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/Oil-less.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 7 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/Smart-oven.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
+
 
                 <!-- Row 8 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/smart-fry-compact.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 9 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/Oil-less.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
 
@@ -195,11 +186,10 @@
                 <!-- Row 10 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/smart-fry-compact.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
 
@@ -207,23 +197,20 @@
                 <!-- Row 11 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/Smart-oven.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
-
 
                 <!-- Row 12 -->
                 <tr>
                     <td>AIR FRY - Compact</td>
-                    <td><img src="" alt=""></td>
-                    <td></td>
+                    <td class="image-container"><img src="./images/products/Oil-less.png" alt=""></td>
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td><sup>CAD</sup>$ 200</td>
+                    <td>CAD<sup>$</sup> 200</td>
                     <td><a href="http://">Video Conference</a></td>
                 </tr>
             </table>
