Finishing Contact Page

--- a/team.html
+++ b/team.html
@@ -69,21 +69,21 @@
 
                     <div class="our-team">
                         <div class="team-member-card">
-                            <img class="team-pic" src="./images/customers/test.webp" alt="Picture of Vaishakh Anil">
-                            <h2>Vaishakh Anil Kumar</h2>
-                            <h3>Founder</h3>
+                            <img class="team-pic" src="./images/employee/founder.webp" alt="Picture of the founder">
+                            <h2 class="memeber-name">Michael Scott</h2>
+                            <h3 class="memeber-role">Founder</h3>
                         </div>
 
                         <div class="team-member-card">
-                            <img class="team-pic" src="./images/customers/test.webp" alt="Picture of Dean Winchester">
-                            <h2>Dean Winchester</h2>
-                            <h3>Pie Specialist</h3>
+                            <img class="team-pic" src="./images/employee/investor.gif" alt="Picture of investor">
+                            <h2 class="memeber-name">Ron Swanson</h2>
+                            <h3 class="memeber-role"">Investor</h3>
                         </div>
 
                         <div class="team-member-card">
-                            <img class="team-pic" src="./images/customers/test.webp" alt="Picture of Sam Winchester">
-                            <h2>Sam Winchester</h2>
-                            <h3>Researcher</h3>
+                            <img class="team-pic" src="./images/employee/acting-manager.gif" alt="Picture of the acting manager">
+                            <h2 class="memeber-name">Dwight Schrute</h2>
+                            <h3 class="memeber-role">Acting Manager</h3>
                         </div>
                     </div>
                 </section>
