Fixing - About Responsiveness

--- a/faqs.html
+++ b/faqs.html
@@ -24,6 +24,7 @@
 
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/about.css">
+        <link rel="stylesheet" href="./css/faqs.css">
 
         <!-- Google Fonts: Poppins -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,24 +66,24 @@
                 <ol class="description vfryer-reasons-list" type="A">
                     <li>
                         <div class="questionContainer">
-                            <h2>What is an air fryer?</h2>
-                            <p>An air fryer is a kitchen appliance that cooks by circulating hot air around the food,
+                            <h2 class="list-title">What is an air fryer?</h2>
+                            <p class="list-description">An air fryer is a kitchen appliance that cooks by circulating hot air around the food,
                                 providing a crispy texture.
                             </p>
                         </div>
                     </li>
                     <li>              
                         <div class="questionContainer">
-                            <h2>What types of food can I cook in an air fryer?</h2>
-                            <p>
+                            <h2 class="list-title">What types of food can I cook in an air fryer?</h2>
+                            <p class="list-description">
                                 Air fryers are versatile and can cook a variety of foods, including fries, vegetables, and even chicken wings!
                             </p>
                         </div>
                     </li>
                     <li>
                         <div class="questionContainer">
-                            <h2>Is there a mobile application to control my air fryer?</h2>
-                            <p>
+                            <h2 class="list-title">Is there a mobile application to control my air fryer?</h2>
+                            <p class="list-description">
                                 Some of our air fryers are interactiable via bluetooth, there is also an mobile app
                                 called vfryConnect in playstore and appstore.
                                 <span>* Please check the product details to view the interface type of your product.</span>
@@ -91,8 +92,8 @@
                     </li>
                     <li>
                         <div class="questionContainer">
-                            <h2>Is there a refund policy?</h2>
-                            <p>
+                            <h2 class="list-title">Is there a refund policy?</h2>
+                            <p class="list-description">
                                 Yes, our company has a refund policy in place.
                                 <span>* Please use our contact form to get more information about the refund policy. 
                                     <a href="./contact.html">query form</a>
