--- a/team.html
+++ b/team.html
@@ -69,15 +69,23 @@
 
                     <div class="our-team">
                         <div class="team-member-card">
-                            <img class="team-pic" src="./images/employee/founder.webp" alt="Picture of the founder">
-                            <h2 class="memeber-name">Michael Scott</h2>
-                            <h3 class="memeber-role">Founder</h3>
+                            <figure>
+                                <img class="team-pic" src="./images/employee/founder.webp" alt="Picture of the founder">
+                                <figcaption class="memeber-name">
+                                    <b>Michael Scott</b>
+                                </figcaption>
+                                <span class="memeber-role">Founder</span>
+                            </figure>
                         </div>
 
                         <div class="team-member-card">
-                            <img class="team-pic" src="./images/employee/investor.gif" alt="Picture of investor">
-                            <h2 class="memeber-name">Ron Swanson</h2>
-                            <h3 class="memeber-role"">Investor</h3>
+                            <figure>
+                                <img class="team-pic" src="./images/employee/investor.gif" alt="Picture of investor">
+                                <figure>
+                                    <b>Ron Swanson</b>
+                                </figure>
+                                <span class="memeber-role">Investor</span>
+                            </figure>
                         </div>
 
                         <div class="team-member-card">
