Fixing the title for Teams

--- a/team.html
+++ b/team.html
@@ -90,8 +90,10 @@
 
                         <div class="team-member-card">
                             <img class="team-pic" src="./images/employee/acting-manager.gif" alt="Picture of the acting manager">
-                            <h2 class="memeber-name">Dwight Schrute</h2>
-                            <h3 class="memeber-role">Acting Manager</h3>
+                            <figure class="memeber-name">
+                                <b>Dwight Schrute</b>
+                            </figure>
+                            <figcaption class="memeber-role">Acting Manager</figcaption>
                         </div>
                     </div>
                 </section>
