Adding video banner to Media Page

--- a/404.html
+++ b/404.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./css/about.css">
         <link rel="stylesheet" href="./css/team.css">
+        <link rel="stylesheet" href="./css/404.css">
 
         <!-- Google Fonts: Poppins & Qwigley -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,10 +57,9 @@
             </ul>
         </nav>
 
-        <main class="team-container" id="team">
-            <h1>
-                
-            </h1>
+        <main class="notfound-container" id="404">
+            <h1>404</h1>
+            <p>PAGE NOT FOUND</p>
         </main>
 
         <footer>
