--- a/training.html
+++ b/training.html
@@ -98,7 +98,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 2 -->
@@ -108,7 +108,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 3 -->
@@ -118,7 +118,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 4 -->
@@ -128,7 +128,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 5 -->
@@ -138,7 +138,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 6 -->
@@ -148,7 +148,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 7 -->
@@ -158,7 +158,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
 
 
@@ -169,7 +169,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 9 -->
@@ -179,7 +179,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
 
 
@@ -190,7 +190,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
 
 
@@ -201,7 +201,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 12 -->
@@ -211,7 +211,7 @@
                     <td>December 20, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
-                    <td><a href="http://">Video Conference</a></td>
+                    <td><a href="#">Video Conference</a></td>
                 </tr>
             </table>
         </div>
