Content change - Table

--- a/training.html
+++ b/training.html
@@ -93,29 +93,29 @@
 
                 <!-- Row 1 -->
                 <tr>
-                    <td>AIR FRY - Compact</td>
+                    <td>AIR FRY-Compact</td>
                     <td class="image-container"><img src="./images/products/Oil-less.png" alt=""></td>
-                    <td>December 20, 2023</td>
+                    <td>December 22, 2023</td>
                     <td>10:00 AM - 12:00 PM EST</td>
-                    <td>CAD<sup>$</sup> 200</td>
+                    <td>CAD<sup>$</sup> 120</td>
                     <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 2 -->
                 <tr>
-                    <td>AIR FRY - Compact</td>
+                    <td>AIR FRY - Hybrid</td>
                     <td class="image-container"><img src="./images/products/Originals.png" alt=""></td>
-                    <td>December 20, 2023</td>
-                    <td>10:00 AM - 12:00 PM EST</td>
-                    <td>CAD<sup>$</sup> 200</td>
+                    <td>December 19, 2023</td>
+                    <td>11:00 AM - 12:00 PM EST</td>
+                    <td>CAD<sup>$</sup> 100</td>
                     <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 3 -->
                 <tr>
-                    <td>AIR FRY - Compact</td>
+                    <td>AIR FRY - Mini</td>
                     <td class="image-container"><img src="./images/products/Oven.png" alt=""></td>
-                    <td>December 20, 2023</td>
+                    <td>January 1, 2024</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
                     <td><a href="#">Video Conference</a></td>
@@ -123,19 +123,19 @@
 
                 <!-- Row 4 -->
                 <tr>
-                    <td>AIR FRY - Compact</td>
+                    <td>AIR FRY - Oven</td>
                     <td class="image-container"><img src="./images/products/smart-fry-compact.png" alt=""></td>
-                    <td>December 20, 2023</td>
-                    <td>10:00 AM - 12:00 PM EST</td>
+                    <td>January 10, 2024</td>
+                    <td>11:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
                     <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 5 -->
                 <tr>
-                    <td>AIR FRY - Compact</td>
+                    <td>AIR FRY - Mini</td>
                     <td class="image-container"><img src="./images/products/Smart-oven.png" alt=""></td>
-                    <td>December 20, 2023</td>
+                    <td>January 20, 2024</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
                     <td><a href="#">Video Conference</a></td>
@@ -143,19 +143,19 @@
 
                 <!-- Row 6 -->
                 <tr>
-                    <td>AIR FRY - Compact</td>
+                    <td>AIR FRY - Toaster</td>
                     <td class="image-container"><img src="./images/products/Oil-less.png" alt=""></td>
-                    <td>December 20, 2023</td>
-                    <td>10:00 AM - 12:00 PM EST</td>
-                    <td>CAD<sup>$</sup> 200</td>
+                    <td>January 20, 2024</td>
+                    <td>1:00 PM - 2:00 PM EST</td>
+                    <td>CAD<sup>$</sup> 100</td>
                     <td><a href="#">Video Conference</a></td>
                 </tr>
 
                 <!-- Row 7 -->
                 <tr>
-                    <td>AIR FRY - Compact</td>
+                    <td>V-FRY - Interfaces</td>
                     <td class="image-container"><img src="./images/products/Smart-oven.png" alt=""></td>
-                    <td>December 20, 2023</td>
+                    <td>January 25, 2024</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
                     <td><a href="#">Video Conference</a></td>
@@ -164,9 +164,9 @@
 
                 <!-- Row 8 -->
                 <tr>
-                    <td>AIR FRY - Compact</td>
+                    <td>AIR FRY - XL</td>
                     <td class="image-container"><img src="./images/products/smart-fry-compact.png" alt=""></td>
-                    <td>December 20, 2023</td>
+                    <td>March 1, 2024</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
                     <td><a href="#">Video Conference</a></td>
@@ -176,7 +176,7 @@
                 <tr>
                     <td>AIR FRY - Compact</td>
                     <td class="image-container"><img src="./images/products/Oil-less.png" alt=""></td>
-                    <td>December 20, 2023</td>
+                    <td>March 20, 2024</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
                     <td><a href="#">Video Conference</a></td>
@@ -185,9 +185,9 @@
 
                 <!-- Row 10 -->
                 <tr>
-                    <td>AIR FRY - Compact</td>
+                    <td>AIR FRY - Oven</td>
                     <td class="image-container"><img src="./images/products/smart-fry-compact.png" alt=""></td>
-                    <td>December 20, 2023</td>
+                    <td>March 21, 2024</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
                     <td><a href="#">Video Conference</a></td>
@@ -196,9 +196,9 @@
 
                 <!-- Row 11 -->
                 <tr>
-                    <td>AIR FRY - Compact</td>
+                    <td>AIR FRY - Multi Zone</td>
                     <td class="image-container"><img src="./images/products/Smart-oven.png" alt=""></td>
-                    <td>December 20, 2023</td>
+                    <td>March 26, 2024</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
                     <td><a href="#">Video Conference</a></td>
@@ -206,9 +206,9 @@
 
                 <!-- Row 12 -->
                 <tr>
-                    <td>AIR FRY - Compact</td>
+                    <td>AIR FRY - Steamers</td>
                     <td class="image-container"><img src="./images/products/Oil-less.png" alt=""></td>
-                    <td>December 20, 2023</td>
+                    <td>April 20, 2024</td>
                     <td>10:00 AM - 12:00 PM EST</td>
                     <td>CAD<sup>$</sup> 200</td>
                     <td><a href="#">Video Conference</a></td>
