--- a/about.html
+++ b/about.html
@@ -101,8 +101,8 @@
                         <span>V-FRY appliances are designed with energy efficiency in mind, helping users save on electricity bills while enjoying delicious meals.</span>
                     </li>
                     <li>
-                        Advanced Technology <br/>
-                        <span>V-FRY air fryers incorporate cutting-edge technology for efficient and precise cooking results.</span>
+                        Safety Features <br/>
+                        <span>VFRY prioritizes safety with features such as automatic shut-off, overheat protection, and cool-touch handles, ensuring a secure cooking experience.</span>
                     </li>
                     <li>
                         Compact Size <br/>
