--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="form-container">
-                <form action="">
+                <form action="./thankyou.html">
                     <fieldset class="product-info">
                         <fieldset class="model-container">
                             <legend>Choose the model</legend>
