--- a/thankyou.html
+++ b/thankyou.html
@@ -59,7 +59,7 @@
 
         <main class="notfound-container" id="404">
             <h1>Thank you</h1>
-            <p>Your query has been submitted.</p>
+            <p class="text">Your query has been submitted.</p>
             <a class="text" href="./index.html"><u>Home</u></a>
         </main>
 
